--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-DATABASE_URL="postgresql://wingsdatingapp107_render_example_user:k2tv22tHt4FhEGm4iGFLPgn655BoayOF@dpg-d1ifa3ali9vc73fvstqg-a.frankfurt-postgres.render.com/wingsdatingapp107_render_example"
-SECRET_KEY="your-secret-key-here"
-FLASK_APP=app.py
+# Database Configuration
+DATABASE_URL=postgresql://postgres:1234@localhost:5432/dating_app
+
+# Flask Configuration
 FLASK_ENV=development
+FLASK_DEBUG=1
+
+# Secret Key (generate a new one for production)
+SECRET_KEY=your-secret-key-here-change-in-production
